PHPHighlighter crashes because of protected constructor <http://earthli.com/projects/view_job.php?id=1983>
- Changed many while/i++ loops to use foreach with reference instead
- Cleaned up a bunch of warnings

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -838,7 +838,12 @@ blockquote p:first-child, .side-bar-body p:first-child, .chart-body p:first-chil
 .tree-node 
 {
   white-space: nowrap;
-  margin-bottom: .1em;
+  margin-bottom: .2em;
+}
+
+.tree-node img
+{
+	padding-right: .25em;
 }
 
 .message-box 
