#681 - Removed margin and padding from radio buttons and checkboxes <http://earthli.com/projects/view_change.php?id=1992>
#680 - Fixed href=“#” / onclick links to return false to avoid navigation
<http://earthli.com/projects/view_change.php?id=1990>

Global text-rendering options should not be updated by the FORM_RENDERER
<http://earthli.com/projects/view_job.php?id=1991>

Updates made while hidden should not queue by default
<http://earthli.com/projects/view_job.php?id=1116>

--- a/site/resources/styles/core/core_forms.css
+++ b/site/resources/styles/core/core_forms.css
@@ -44,5 +44,7 @@ http://www.earthli.com/software/webcore
 input[type="radio"], input[type="checkbox"]
 {
 	vertical-align: middle;
+	margin: 0px;
+	padding: 0px;
 }
 
