--- a/site/resources/themes/ice_forms.css
+++ b/site/resources/themes/ice_forms.css
@@ -27,19 +27,20 @@ http://www.earthli.com/software/webcore
 
 .button-control
 {
-	border: 1px solid #AAAAAA;
-	background: url(ice/menu-item-background.png) repeat;
+  background-color: #EEEEEE;
+  border: 1px solid silver;
+  border-radius: 4px;
 }
 
 .button-control:active, .button-control:hover, .button-control:focus
 {
-	border-color: #666666;
-	background: url(ice/sidebar-background.png) repeat;
+  border-color: darkgray;
+  background-color: #DDDDDD;
 }
 
 .text-control, .menu-control, .text-control-required, .menu-control-required
 {
-	border-color: #999999;
+	border: 1px solid #999999;
 }
 
 .text-control, .menu-control
