--- a/site/resources/themes/hochzeit_forms.css
+++ b/site/resources/themes/hochzeit_forms.css
@@ -34,7 +34,7 @@ http://www.earthli.com/software/webcore
 	color: #000080;
 }
 
-.text-control, .menu-control, .text-control-required
+.text-control, .menu-control, .text-control-required, .menu-control-required
 {
   border: 1px solid #554433;
   background: #BBAA99 url(hochzeit/fossil_paper.jpg) repeat;
