--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -245,6 +245,7 @@ pre code
 .page 
 {
   max-width: 900px;
+  min-width: 500px;
   margin-bottom: 5px;
   margin-right: 5px;
 }
@@ -302,8 +303,9 @@ pre code
 {
   width: 50px;
   height: 50px;
+  float: right;
+  margin-left: 15px;
   background-repeat: no-repeat;
-  display: inline-block;
 }
 
 .login-status 
