--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -772,6 +772,12 @@ ul.menu-buttons > li + li
 {
   padding: 5px;
   display: block;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .menu-item.icon,
