--- a/site/albums/styles/calendar.css
+++ b/site/albums/styles/calendar.css
@@ -1,11 +1,10 @@
-.cell-empty {  width: 8em; height: 4em}
-.cell-non-empty {  width: 8em; height: 4em}
-.cell-selected {  width: 8em; height: 4em}
-
-.calendar {  border-collapse: collapse}
-.year {  text-align: center; font-weight: bold}
-.month {  text-align: center; font-weight: bold}
-.weekday {  text-align: center; font-weight: bold}
+.cell-empty,
+.cell-non-empty,
+.cell-selected
+{
+  min-width: 8em;
+  height: 4em;
+}
 
 .month {  font-size: 120%; }
 .year {  font-size: 150%; }
