--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -881,7 +881,7 @@ ul.menu-buttons > li + li
   text-decoration: none;
   min-width: 2.2em;
   min-height: 2.2em;
-  padding: 5px;
+  padding: .5em;
   box-sizing: border-box;
   background-color: #CCCCCC;
   text-align: center;
