Menu item height should be based on font size <http://dev.earthli.com/projects/view_job.php?id=2140>

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -754,7 +754,7 @@ ul.menu-buttons > li + li
 
 .menu-group-title 
 {
-  padding: 5px;
+  padding: .6em .5em;
   border-bottom: 1px dotted #CCC;
 }
 
@@ -773,7 +773,7 @@ ul.menu-buttons > li + li
 
 .menu-item 
 {
-  padding: 5px;
+  padding: .6em .5em;
   display: block;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
