Breadcrumbs items do not wrap as expected <http://dev.earthli.com/projects/view_job.php?id=2139>

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -689,7 +689,7 @@ ul.menu-items > li,
 .text-flow ul.menu-items > li
 {
   line-height: 100%;
-  display: inline-block;
+  display: inline;
   margin-right: 5px;
 }
 
